fixed logo size on mobile

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -21,13 +21,21 @@
 	background: #d0e6ff;
 }
 .tagline {
-	position: absolute;
-	bottom: 0;
-	margin-bottom: 15px;
-	right: 0;
-	margin-right: 15px;
-	float: right;
+	text-align: center;
 	text-shadow: 3px 3px #000;
+	position: relative;
+	@include breakpoint (xs) {
+		margin-top: 200px;
+	}
+	@include breakpoint (sm) {
+		position: absolute;
+		bottom: 0;
+		margin-bottom: 15px;
+		right: 0;
+		margin-right: 15px;
+		float: right;
+		text-shadow: 3px 3px #000;
+	}
 }
 .injured {
 	min-height: 200px;
@@ -45,10 +53,18 @@
 	width: 100%;
 	min-height: 200px;
 	background: #b0b0b0;
-	background-image: url('../../../../uploads/2020/09/ankle.png');
-	background-repeat: no-repeat;
-	background-position: right;
-	background-size: contain;
+	@include breakpoint (sm) {
+		background-image: url('../../../../uploads/2020/09/ankle.png');
+		background-repeat: no-repeat;
+		background-position: right;
+		background-size: 50%;
+	}
+	@include breakpoint (md) {
+		background-image: url('../../../../uploads/2020/09/ankle.png');
+		background-repeat: no-repeat;
+		background-position: right;
+		background-size: contain;
+	}
 }
 .office {
 	width: 100%;
@@ -74,9 +90,9 @@
 	}
 }
 .nav--logo {
-	margin-top: 10px;
+	margin-top: -15px;
 	@include breakpoint (sm) {
-		margin-top: 40px;
+		margin-top: 10px;
 	}
 	@include breakpoint (md) {
 		margin-top: 0px;
